[package]
name = "ress-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-ress-protocol.workspace = true
reth-primitives.workspace = true
reth-network.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-rpc-client.workspace = true

# misc
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
parking_lot.workspace = true
eyre.workspace = true
tracing.workspace = true
tungstenite = "0.26.1"
