[package]
name = "zk-ress-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
zk-ress-provider.workspace = true

# reth
reth-stateless.workspace = true
reth-ress-protocol.workspace = true
reth-zk-ress-protocol.workspace = true
reth-primitives.workspace = true
reth-errors.workspace = true
reth-evm-ethereum.workspace = true
# misc
thiserror.workspace = true
tracing.workspace = true
