[package]
name = "ress-vm"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-provider.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-trie.workspace = true
alloy-rlp.workspace = true

# reth
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true
reth-trie-sparse.workspace = true

# misc
thiserror.workspace = true
tracing.workspace = true
