[package]
name = "ress-network"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-protocol.workspace = true
ress-common.workspace = true

# reth
reth-network.workspace = true
reth-network-api.workspace = true
reth-chainspec.workspace = true

# alloy
alloy-primitives.workspace = true

# misc
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
