[package]
name = "ress-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-protocol.workspace = true

# reth
reth-primitives.workspace = true
reth-network-api.workspace = true
reth-network.workspace = true

# alloy
alloy-primitives.workspace = true

# misc
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
