[package]
name = "ress-protocol"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-eth-wire.workspace = true
reth-network-api.workspace = true
reth-network.workspace = true
reth-storage-errors.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# misc
futures.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
tracing.workspace = true

# feature `arbitrary`
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
proptest.workspace = true
proptest-arbitrary-interop.workspace = true

[features]
arbitrary = ["dep:arbitrary"]
